<resources>
    <string name="app_name">OSChina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="platform_sina">微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_copy_link">动弹</string>
    <string name="platform_more_option">预览</string>
    <string name="tip_phone_can_not_be_empty" />
    <string name="tip_phone_regex_not_right" />
    <string name="tip_please_input_6_32_password" />
    <string name="tweet_hint">今天想动弹什么?</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
</resources>
