<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/ly_share_sina_weibo"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_sinaweibo_selector"
                android:text="@string/platform_sina" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_share_weichat_circle"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechatfriends_selector"
                android:text="@string/platform_weichat_circle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_weichat"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechat_selector"
                android:text="@string/platform_weichat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_qq"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_qq_selector"
                android:text="@string/platform_qq" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >



        <LinearLayout
            android:id="@+id/ly_share_copy_link"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center">

            <TextView
                style="@style/dialog_content_share_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:drawableTop="@mipmap/ic_nav_tweet_actived"
                android:text="@string/platform_copy_link" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_more_option"
            android:layout_width="95dp"
            android:layout_height="95dp" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/show"
                android:text="@string/platform_more_option" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>